ELI-18: fixing remove contacts button so disabled/enabled depending on whether any downloaded contacts, also styling when accessing from mobile.

--- a/frontend/www/css/style.css
+++ b/frontend/www/css/style.css
@@ -2,7 +2,7 @@
     color: darkgray;
 }
 .cached {
-    /*font-style: italic;*/
+    font-weight: bold;
 }
 .bar.bar-footer p.title {
     font-size: 14px;
