--- a/frontend/www/templates/contactable-list.html
+++ b/frontend/www/templates/contactable-list.html
@@ -26,7 +26,7 @@
                         class="item-avatar item-icon-left item-remove-animate"
                         type="item-text-wrap"
                         href="#/tab/contactables/{{contactable.$$instanceId}}" >
-                    <h3 class="{{ctrl.cachedStateCssClass(contactable.$$instanceId)}}">{{contactable.name}}</h3>
+                    <h3 class="{{ctrl.cachedStateCssClass(contactable)}}">{{contactable.name}}</h3>
                     <div ng-if="contactable.type == 'Contact'">
                         <p>{{contactable.company}}</p>
                         <i class="icon ion-android-contact"></i>
