--- a/backend/webapp/src/main/webapp/frontend/templates/download.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/download.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="col">
                         <button class="button button-assertive button-block"
-                                ng-click="ctrl.clearCache()"
+                                ng-click="ctrl.removeDownloadedContacts()"
                                 ng-disabled="ctrl.numberOfDownloadedContacts() === 0">
                             <i class="ion-android-delete">&nbsp;Remove {{ctrl.numberOfDownloadedContacts()}}</i>
                         </button>
