--- a/frontend/www/templates/options.html
+++ b/frontend/www/templates/options.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Download">
+<ion-view view-title="Options">
 
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
