--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -8,11 +8,11 @@
         <ion-nav-view name="tab-contactables"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Download"
-             icon-off="ion-android-download"
-             icon-on="ion-android-download"
-             href="#/tab/download">
-        <ion-nav-view name="tab-download"></ion-nav-view>
+    <ion-tab title="Options"
+             icon-off="ion-android-settings"
+             icon-on="ion-android-settings"
+             href="#/tab/options">
+        <ion-nav-view name="tab-options"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
