--- a/backend/webapp/src/main/webapp/frontend/templates/options.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/options.html
@@ -12,6 +12,22 @@
 
     <ion-content>
 
+        <ul class="list card">
+
+            <div class="item item-text-wrap">
+                Change how scrolling and filtering works.
+            </div>
+
+            <ion-list>
+                <ion-radio ng-repeat="item in preferences.filteringAndScrolling.options"
+                           ng-value="item.value"
+                           ng-model="preferences.filteringAndScrolling.selected">
+                    {{ item.text }}
+                </ion-radio>
+            </ion-list>
+
+        </ul>
+
         <div class="card">
             <div class="item item-text-wrap">
                 Download contacts so that they are accessible even while offline.
