--- a/frontend/www/templates/options.html
+++ b/frontend/www/templates/options.html
@@ -44,6 +44,23 @@
         </div>
 
 
+        <ul class="list card">
+
+            <div class="item item-text-wrap">
+                Change how scrolling and filtering works.
+            </div>
+
+            <ion-list>
+                <ion-radio ng-repeat="item in preferences.filteringAndScrolling.options"
+                           ng-value="item.value"
+                           ng-model="preferences.filteringAndScrolling.selected">
+                    {{ item.text }}
+                </ion-radio>
+            </ion-list>
+
+        </ul>
+
+
     </ion-content>
 
 </ion-view>
