--- a/frontend/www/templates/options.html
+++ b/frontend/www/templates/options.html
@@ -47,7 +47,7 @@
         <ul class="list card">
 
             <div class="item item-text-wrap">
-                Change how scrolling and filtering works.
+                Change how scrolling works; this impacts filtering and speed to render the home page.
             </div>
 
             <ion-list>
