ELI-32: shorten URLs (view model mementos).

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -63,10 +63,10 @@
 
             <div class="list card" ng-if="ctrl.contactable.type === 'Contact'">
                 <ion-item ng-repeat="contactRole in ctrl.contactable.contactRoles"
-                          class="item-avatar item-icon-left {{ctrl.cachedStateCssClass(contactRole.contactGroup.$$instanceId)}}"
+                          class="item-avatar item-icon-left"
                           type="item-text-wrap"
                           href="#/tab/contactables/{{contactRole.contactGroup.$$instanceId}}" >
-                    <h3>{{contactRole.contactGroupName}}</h3>
+                    <h3 class="{{ctrl.cachedStateCssClass(contactRole.contactGroup.$$instanceId)}}">{{contactRole.contactGroupName}}</h3>
                     <p>
                         <span ng-show="isDefined(contactRole.contactGroupCountryName)">{{contactRole.contactGroupCountryName}}</span>
                         <span ng-show="isDefined(contactRole.roleName)">({{contactRole.roleName}})</span>
@@ -77,10 +77,10 @@
 
             <div class="list card" ng-if="ctrl.contactable.type === 'Contact Group'">
                 <ion-item ng-repeat="contactRole in ctrl.contactable.contactRoles"
-                          class="item-avatar item-icon-left {{ctrl.cachedStateCssClass(contactRole.contact.$$instanceId)}}"
+                          class="item-avatar item-icon-left"
                           type="item-text-wrap"
                           href="#/tab/contactables/{{contactRole.contact.$$instanceId}}" >
-                    <h3>{{contactRole.contactName}}</h3>
+                    <h3 class="{{ctrl.cachedStateCssClass(contactRole.contact.$$instanceId)}}">{{contactRole.contactName}}</h3>
                     <p>
                         <span ng-show="isDefined(contactRole.contactCompany)">{{contactRole.contactCompany}}</span>
                         <span ng-show="isDefined(contactRole.roleName)"> ({{contactRole.roleName}})</span>
