ELI-33: factored out a preferences service.
The preferences are not being persisted properly to localStorage, though...

--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -29,8 +29,8 @@
 
     <div class="bar bar-footer bar-dark">
         <div class="button-bar">
-            <select ng-model="data.environment" class="button">
-                <option ng-repeat="env in data.environments">{{env.name}}</option>
+            <select ng-model="preferences.environment" class="button">
+                <option ng-repeat="env in preferences.environments">{{env.name}}</option>
             </select>
             <button class="button button-primary" ng-click="about()">About</button>
         </div>
