--- a/frontend/www/templates/contactable-list.html
+++ b/frontend/www/templates/contactable-list.html
@@ -19,6 +19,10 @@
 
         <ion-list  ng-switch-when="ng-repeat">
 
+            <div class="item item-divider">
+                ng-repeat
+            </div>
+
             <div ng-repeat="contactable in ctrl.contactables">
                 <div class="item item-divider" ng-if="ctrl.firstLetter(contactable.name) !== ctrl.firstLetter(ctrl.contactables[$index-1].name)">
                     {{::ctrl.firstLetter(contactable.name)}}
@@ -41,6 +45,10 @@
         </ion-list>
 
         <ion-list ng-switch-when="collection-repeat">
+
+            <div class="item item-divider">
+                collection-repeat
+            </div>
 
             <div collection-repeat="contactable in ctrl.contactables">
                 <div class="item item-divider" ng-if="ctrl.firstLetter(contactable.name) !== ctrl.firstLetter(ctrl.contactables[$index-1].name)">
