--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -16,10 +16,10 @@
 
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="data.username" >
+                <input type="text" placeholder="Username" ng-model="credentials.username" >
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password" ng-model="data.password">
+                <input type="password" placeholder="Password" ng-model="credentials.password">
             </label>
         </div>
         <button class="button button-block button-calm" ng-click="login()">Login</button>
