--- a/frontend/www/templates/contactable-list.html
+++ b/frontend/www/templates/contactable-list.html
@@ -15,7 +15,7 @@
 
     </ion-nav-bar>
 
-    <ion-content scroll="true" overflow-scroll="true" ng-switch on="ctrl.preferences.filteringAndScrolling.selected">
+    <ion-content scroll="true" overflow-scroll="true" ng-switch on="ctrl.preferences.scrolling.selected">
 
         <ion-list  ng-switch-when="ng-repeat">
 
