--- a/frontend/www/templates/options.html
+++ b/frontend/www/templates/options.html
@@ -50,9 +50,9 @@
             </div>
 
             <ion-list>
-                <ion-radio ng-repeat="item in ctrl.preferences.filteringAndScrolling.options"
+                <ion-radio ng-repeat="item in ctrl.preferences.scrolling.options"
                            ng-value="item.value"
-                           ng-model="ctrl.preferences.filteringAndScrolling.selected"
+                           ng-model="ctrl.preferences.scrolling.selected"
                            ng-change="updateScrolling()" >
                     {{ item.text }}
                 </ion-radio>
