--- a/backend/webapp/src/main/webapp/frontend/templates/options.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/options.html
@@ -64,6 +64,9 @@
 
         <ul class="list card">
             <ion-list>
+                <ion-item class="item-text-wrap">
+                    How the home tab is shown
+                </ion-item>
                 <ion-radio name="scrolling"
                            ng-repeat="item in ctrl.preferences.scrolling.options"
                            ng-value="item.value"
